# WebpPreviewForWindowsExplorer

./: .gitignore  CMakeLists.txt  Folder.DotSettings  LICENSE  README.md
.github/workflows/: artifcats.yaml
Installer/: Installer.sln  Installer.wixproj  Product.wxs  README.txt
__lib__/libwebp-1.1.0-windows-x64/: CMakeLists.txt
src/: ClassFactory.cpp  ClassFactory.h  Registry.cpp  Registry.h  ThumbnailProvider.cpp  ThumbnailProvider.h  WebpReader.cpp  WebpReader.h  dllmain.cpp  dllmain.h
